# parser_project

./: .gitignore  execution_report.md  main.py  pyproject.toml
